<resources>
    <string name="app_name">Blog App</string>
    <string name="text_home">Home</string>
    <string name="text_favorite">Favorites</string>
    <string name="unread_status">Unread Status</string>
    <string name="refresh_all">Refresh All</string>
    <string name="description">Description</string>
    <string name="user">User details</string>
    <string name="know_more">Know More ></string>
    <string name="need_internet_posts">Need internet to fetch latest posts!</string>
    <string name="failed_post_try_again">Failed to load posts. Please try again later.</string>
    <string name="user_image">User\'s Avatar Image</string>
    <string name="delete_image">delete Image</string>
    <string name="movieImage">movie</string>
    <string name="button_trailers">b</string>
    <string name="no_comments_error">No comments found for this post!</string>
    <string name="action_profile">Profile</string>
    <string name="action_add_posts">Add posts</string>
    <string name="text_user_name">User Name</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email Address</string>
    <string name="text_phone">Phone</string>
    <string name="text_website">website</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_edit">Edit</string>
    <string name="text_comments">Write a comment....</string>
    <string name="text_post_title">Post title</string>
    <string name="text_post_detail">Write about post....</string>
    <string name="text_create_post">Create Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
